# documentation_robotics

./: .claude_prompt_3746794f-b18d-4b3e-9961-887f50ed0f1c.txt  .claude_prompt_6abf295d-22b7-48f5-8fc9-e0e105f36e0c.txt  .claude_prompt_a24788ab-b4fa-44c3-811c-06ee8140098b.txt  .claude_prompt_c715ac5c-9859-40a9-aefc-3b502a3fa831.txt  .claude_prompt_conversational_business_analyst_1767568952.txt  .claude_prompt_conversational_software_architect_1766861425.txt  .claude_prompt_conversational_software_architect_1767577149.txt  .claude_prompt_ef5912cf-0980-4120-8af8-b05b85c8c399.txt  .claude_prompt_repair_fix_tests_integration_source-reference_test_ts_senior_software_engineer_1767878390.txt  .claude_prompt_repair_test_pre-commit_type1_iter1_attempt0_senior_software_engineer_1770505628.txt  .claude_prompt_repair_test_pre-commit_type1_iter1_attempt0_senior_software_engineer_1770692675.txt  .claude_prompt_review_cycle_code_reviewer_1766164301.txt  .claude_prompt_review_cycle_code_reviewer_1767013219.txt  .claude_prompt_review_cycle_code_reviewer_1767569670.txt  .claude_prompt_review_cycle_code_reviewer_1767617424.txt  .claude_prompt_review_cycle_code_reviewer_1768397451.txt  .claude_prompt_review_cycle_code_reviewer_1768498616.txt  .claude_prompt_review_cycle_documentation_editor_1770719368.txt  .claude_prompt_review_cycle_senior_software_engineer_1765821662.txt  .claude_prompt_review_cycle_senior_software_engineer_1767011530.txt  .claude_prompt_review_cycle_senior_software_engineer_1767877249.txt  .claude_prompt_review_cycle_senior_software_engineer_1767877352.txt  .claude_prompt_review_cycle_senior_software_engineer_1768395835.txt  .claude_prompt_review_cycle_senior_software_engineer_1768407648.txt  .claude_prompt_review_cycle_senior_software_engineer_1768496067.txt  .claude_prompt_review_cycle_senior_software_engineer_1769347810.txt  .claude_prompt_review_cycle_senior_software_engineer_1769349407.txt  .claude_prompt_review_cycle_senior_software_engineer_1769369216.txt  .claude_prompt_review_cycle_senior_software_engineer_1769399430.txt  .claude_prompt_review_cycle_senior_software_engineer_1769399534.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_135_1767365551_senior_software_engineer_1767365553.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_145_1767576841_senior_software_engineer_1767576843.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_148_1767641682_senior_software_engineer_1767641683.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_165_1767834403_senior_software_engineer_1767834403.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_169_1767878150_senior_software_engineer_1767878150.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_204_1768473555_senior_software_engineer_1768473556.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_217_1769100285_senior_software_engineer_1769100286.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_240_1769348878_senior_software_engineer_1769348878.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_284_1769606995_senior_software_engineer_1769606995.txt  .claude_prompt_senior_software_engineer_documentation_robotics_SDLC_Execution_30_1766147556_senior_software_engineer_1766147557.txt  (+122 more)
cli/: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  DIFFERENTIAL_TEST_RESULTS.md  NPM_PUBLISHING_SETUP.md  PHASE4_PARALLEL_TESTS.md  PYTHON_CLI_COMPATIBILITY.md  PYTHON_CLI_PARITY.md  PYTHON_CLI_STRUCTURE_UPDATE.md  QUICK_START_PHASE4.md  README.md  SPEC_LOADER_USAGE_GUIDE.md  TESTING_LOCALLY.md  UNIFIED_STRUCTURE_COMPLETE.md  biome.json  bunfig.toml  demo_testing_layer.sh  esbuild.config.js  otel-collector-config.example.yml  otel-send-config.example.yml  package-lock.json  package.json  pyproject.toml  test-commit-debug.ts  test-commit-debug2.ts  test-commit-debug3.ts  test-copilot-upgrade.sh  test-cwd.js  test-cwd.test.ts  test-debug.js  test-debug.mjs  test-discover-debug.ts  test-graph-debug.ts  test-output.txt  test-path.test.ts  test-single.ts  test_debug.ts  test_id_gen.js  test_manifest_content.js  (+3 more)
cli/docs/: 00_cli_vision.md  01_cli_requirements.md  02_cli_design_phase_1.md  02_cli_design_phase_2.md  02_cli_design_phase_3.md  02_cli_design_phase_4.md  02_cli_design_phase_5.md  03_cli_dev_plan_phase_1.md  03_cli_dev_plan_phase_2.md  03_cli_dev_plan_phase_3.md  03_cli_dev_plan_phase_4.md  03_cli_dev_plan_phase_5.md  04_claude_code_integration_design.md  AGENT_ABSTRACTION.md  AUDIT_PIPELINE.md  COMMAND_LIFECYCLE.md  DRBOT_README.md  GOLDEN-COPY-GUIDE.md  GRACEFUL_SHUTDOWN.md  README.md  SCAN_ARCHITECTURE.md  SPEC_DATA_LOADER.md  TEST-INSTRUMENTATION.md  TESTING_ANNOTATIONS.md  VISUALIZATION_SERVER_TELEMETRY.md  api-spec.yaml  claude-code-improvements-for-developers.md  claude-code-raw-todo.md  telemetry.md  validation-loop.md
cli/docs/testing/: CHAT_QUICKSTART.md  chat-test-harness.md  claude-integration-tests.md  sdk-installation-guide.md
cli/docs/user-guide/: claude-code-integration.md  getting-started.md  link-management.md  (+2 more)
cli/documentation/: AGENT_GUIDANCE_ARRAY_PROPERTIES.md  CHANGESET_FILE_SPEC.md
cli/dr/: dr.config.yaml  projection-rules.yaml
cli/examples/: README.md  agent-usage.js
cli/scripts/: README.md  bundle_viewer.py  convert-nodes-to-schemas.mjs  download-viewer.sh  fix-process-exit.py  generate-openapi.ts  generate-registry.ts  generate-spec-instances.ts  generate-validators.ts  generate_schemas.py  populate-baseline-model.ts  prepare_build.py  relationship-audit.ts  run-extended-tests.sh  run-parallel-tests.sh  run-regression-tests.sh  run-smoke-tests.sh  sync-spec-schemas.sh  update-test-ids.py  validate-coverage-threshold.js  validate-phase4.sh
cli/src/: cli.ts  globals.d.ts  server-entry.ts
cli/tests/: ci-smoke.manifest.ts  conftest.py  helpers.ts  metrics.ts  setup.ts  test-categories.ts
cli/tmp/: test-audit.json
(+5807 files in other folders)
